Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22674

adding cpp file and rerunning cmake / building does not include corresponding header file to project

    XMLWordPrintable

Details

    Description

      Adding cpp file and rerunning cmake / building does not include corresponding header file to project.
      In particlar the default instead of the project's tab/whitespace settings are applied to the header file.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            Kot-Zadrot Slava
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes