CMake: Request filesystem scan when cmake files change

The typical use case is to add header/source file and then update
the CMakeLists.txt file to add the source.

Request a filesystem scan when a cmakefile changes to pick up the
header file when the source file is added.

Task-number: QTCREATORBUG-22674
Change-Id: Ifbb1ba37dd46967215f51db2c6ad92af669df585
Reviewed-by: Cristian Adam <cristian.adam@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>